# .projectstarter

./: README.md  cli.py  pyproject.toml
.github/workflows/: release.yml
templates/: .pre-commit-config.yaml
