[tool.poetry]
name = "-projectstarter"
version = "0.1.0"
description = "projectstarter with cli"
authors = ["luukjuh123"]
license = "MIT"
readme = "README.md"
packages = [{include = "projectstarter"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
